docs/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  replicas: 5
  serviceName: mysql-service-headless
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec: 
      containers:
        - name: mysql
          image: mysql
          volumeMounts: 
            - mountPath: /var/lib/mysql
              name: mysql-volume
   :
    - metadata:
        name: mysql-volume
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
