docs/mysql-service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service-headless
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
  clusterIP: None
